// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownLink /> renders with dropdown menu 1`] = `
<Fragment>
  <div>
    <div
      className="nav__link"
      data-test-nav-link={true}
      onClick={[MockFunction]}
    >
      <div
        className="nav__link-text-wrapper"
      >
        <div
          className="nav__link-text"
        >
          Elon Musk
        </div>
        <div
          className="nav__link-subtext"
        >
          first company
        </div>
      </div>
      <i
        className="material-icons-outlined nav__link-icon"
      >
        settings
      </i>
    </div>
    <DropdownMenu
      toggleDropdownMenuVisibility={[MockFunction]}
    />
  </div>
</Fragment>
`;

exports[`<DropdownLink /> renders without dropdown menu 1`] = `
<Fragment>
  <div>
    <div
      className="nav__link"
      data-test-nav-link={true}
      onClick={[MockFunction]}
    >
      <div
        className="nav__link-text-wrapper"
      >
        <div
          className="nav__link-text"
        >
          Elon Musk
        </div>
        <div
          className="nav__link-subtext"
        >
          first company
        </div>
      </div>
      <i
        className="material-icons-outlined nav__link-icon"
      >
        settings
      </i>
    </div>
  </div>
</Fragment>
`;
